--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ www.typeandgrids.com
 			<ul class="linedList">
 				<li><strong>Location:</strong> University of Technology, Sydney</li>
 				<li><strong>Email us:</strong> <a href="mailto:ixgdesign@activateuts.com.au">ixgdesign@activateuts.com.au</a></li>
-				<li><strong>R&eacute;sum&eacute;:</strong> <a href="resume.pdf">resume.pdf</a></li>
+				<!-- <li><strong>R&eacute;sum&eacute;:</strong> <a href="resume.pdf">resume.pdf</a></li> -->
 			</ul>
 			
 		</div>
