--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@ www.typeandgrids.com
 	<!-- Header begins ========================================================================== -->
 	<header class="sixteen columns">
 		<div id="logo">
-			<img src="images/logo.png" width="275" height="35" alt="Logo" />
+			<img src="images/logo.png" width="275" height="125" alt="Logo" />
 			<h1>Interaction &amp; Games Design Society</h1>
 			<h2>University of Technology, Sydney</h2>
 		</div>
 		<nav>
 			<ul>
-				<li><button id="aboutPage">About</button></li>
+				<li><button id="gamesPage">Games</button></li>
 				<li><button id="eventsPage">Events</button></li>
-				<li><button id="showcasePage">Showcase</button></li>
+				<li><button id="aboutPage">About</button></li>
 				<!--<li><a href="http://wordpress.org" target="_blank">Blog</a></li>-->
 			</ul>
 		</nav>
@@ -74,8 +74,8 @@ www.typeandgrids.com
 	</header>
 	<!-- Header ends ============================================================================ -->
 	
-	<!-- Showcase page begins ============================================================== -->
-	<div id="showcase">
+	<!-- Games page begins ============================================================== -->
+	<div id="games">
 	
 		<div id="overview" class="sixteen columns">
 			<h3>Games and interactive media by our very talented members!</h3>
@@ -290,7 +290,7 @@ www.typeandgrids.com
 		</div>
 	
 	</div>
-	<!-- Showcase page ends ========================================================================= -->
+	<!-- Games page ends ========================================================================= -->
 	
 	<!-- About page begins ====================================================================== -->
 	<div id="about">
