Add image and btn to games section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="hero-right col-sm-6">
                 <h1 class="header-headline bold"> Welcome to Playmakers <br></h1>
                 <h4 class="header-running-text light"> A society of interaction and game designers at UTS. </h4>
-                <a href="#email-form">
+                <a href="https://activateuts.com.au/clubs/playmakers">
                     <button class="hero-btn"> JOIN US! </button>
                 </a>
             </div><!--hero-left-->
@@ -83,7 +83,7 @@
                 <img class="feature-img" src="assets/images/responsive.svg">
             </div>
             <h5 class="feature-head-text feature-no-display"> WEEKLY MEETUP </h5>
-            <p class="feature-subtext light feature-no-display"> Every Friday, work on games together, play test and receive feedback. We'll also have a fun social outing in this space every month. </p>
+            <p class="feature-subtext light feature-no-display"> Every Friday, work on games together, play test and receive feedback. <br><br>We'll also have a fun social outing in this space every month. </p>
         </div>
 
         <div class="col-sm-4 feature">
@@ -99,7 +99,7 @@
                 <img class="bullet-img" src="assets/images/design.svg">
             </div>
             <h5 class="feature-head-text feature-no-display feature-display-last"> GAME JAMS </h5>
-            <p class="feature-subtext light feature-no-display feature-display-last"> Monthly weekend-long game making competition with attractive prizes, each with a unique theme. <br><br> 27/3 - 29/3 <br> 24/4 - 26/4 <br> 22/5 - 24/5 </p>
+            <p class="feature-subtext light feature-no-display feature-display-last"> Monthly game making competition over the weekend with attractive prizes, each with a unique theme. <br><br> 27/3 - 29/3 <br> 24/4 - 26/4 <br> 22/5 - 24/5 </p>
         </div>
     </div> <!--features-container-->
 </div> <!--features-section-->
@@ -115,10 +115,10 @@
 <!-- White-Section
   ================================================== -->
 
-<div class="white-section row">
+<div id="games" class="white-section row">
 
     <div class="imac col-sm-6">
-        <img class="imac-screen img-responsive" src="assets/images/imac.png">
+        <img class="imac-screen img-responsive" src="assets/images/imj_games.png">
     </div>
 
     <div class="col-sm-6">
@@ -128,8 +128,10 @@
             <h2 class="imac-section-header light"> GAMES </h2>
 
             <div class="imac-section-desc">
-
-            <span>  Wonderful games made by our talented stuudents as a result of our game jams! </span>
+                <span> Play wonderful games made by our talented students as a result of our game jams! </span>
+                <a href="./games.html">
+                    <button class="hero-btn"> SEE THE GAMES </button>
+                </a>
             </div>
         </div>
     </div>
@@ -243,7 +245,7 @@
 
 <div class="blue-section">
     <h3 class="blue-section-header bold"> Sign up for our mailing list!</h3>
-    <h4 class="blue-section-subtext light">Be the first to know about our events and game news.</h4>
+    <h4 class="blue-section-subtext light">Be the first to know about our events, game dev jobs and news about games.</h4>
 
     <div class="email-form-div">
         <form id="email-form" class="form-group email-form" action="mailchimp.php" method="post">
