Add calendar. Change theme

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <!-- Navigation
     ================================================== -->
 <div class="hero-background">
-    <div>
+    <!-- <div>
         <img class="strips" src="assets/images/strips.png">
-    </div>
+    </div> -->
     <div class="container">
         <div class="header-container header">
             <a class="navbar-brand logo" href="#"> <img class="logo" style="max-width:300%" src="assets/images/logo.svg"/></a>
@@ -47,7 +47,7 @@
           ================================================== -->
 
         <div class="hero row">
-            <div class="hero-right col-sm-6">
+            <div class="hero-right col-sm-5">
                 <h1 class="header-headline bold"> Welcome to Playmakers <br></h1>
                 <h4 class="header-running-text light"> A society of interaction and game designers at UTS. </h4>
                 <a href="https://activateuts.com.au/clubs/playmakers">
@@ -56,7 +56,7 @@
             </div><!--hero-left-->
 
             <div class="col-sm-6 col-sm-6">
-                <img class="ipad-screen img-responsive" src="assets/images/graphics.png"/>
+                <img class="ipad-screen" src="assets/images/playmakers_graphics.svg"/>
                 <!-- <img class="fragmented-background" src="assets/images/fragmented-background.svg"/> -->
             </div>
 
@@ -69,10 +69,37 @@
 </div><!--hero-background-->
 
 
+<!-- White-Section
+  ================================================== -->
+
+  <div id="games" class="white-section row">
+
+    <div class="imac col-sm-6">
+        <img class="imac-screen img-responsive" src="assets/images/imj_games.png">
+    </div>
+
+    <div class="col-sm-6">
+
+        <div class="white-section-text">
+
+            <h2 class="imac-section-header light"> GAMES </h2>
+
+            <div class="imac-section-desc">
+                <span> Play wonderful games from talented students participating in our game jams! </span>
+                <a href="./games.html">
+                    <button class="hero-btn"> PLAY NOW </button>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<!--white-section-text-section--->
+
+
 <!-- Features
   ================================================== -->
 
-<div id="events" class="features-section">
+<div id="events" class="features-section secondary-background">
 
     <div class="features-container row">
 
@@ -91,17 +118,20 @@
                 <img class="feature-img" src="assets/images/customizable.svg">
             </div>
             <h5 class="feature-head-text feature-no-display feature-display-mid"> WORKSHOPS </h5>
-            <p class="feature-subtext light feature-no-display feature-display-mid"> Every month, learn ins and outs of interaction and games design with hands-on workshops.<br><br>23/3: Game Programming<br>13/4: UX Design<br>11/5: Game Design</p>
+            <p class="feature-subtext light feature-no-display feature-display-mid"> Every month, learn ins and outs of interaction and games design with hands-on workshops.<br><br>23 Mar: Game Programming<br>13 Apr: UX Design<br>11 May: Game Design</p>
         </div>
 
         <div class="col-sm-4 feature">
             <div class="feature-icon feature-no-display feature-display-last">
                 <img class="bullet-img" src="assets/images/design.svg">
             </div>
-            <h5 class="feature-head-text feature-no-display feature-display-last"> GAME JAMS </h5>
-            <p class="feature-subtext light feature-no-display feature-display-last"> Monthly game making competition over the weekend with attractive prizes, each with a unique theme. <br><br> 27/3 - 29/3 <br> 24/4 - 26/4 <br> 22/5 - 24/5 </p>
+            <h5 class="feature-head-text feature-no-display feature-display-last"> HACKATHONS </h5>
+            <p class="feature-subtext light feature-no-display feature-display-last"> Monthly hackathons over the weekend with attractive prizes, each with a unique theme. <br><br> 27 - 29 Mar: Game Jam <br> 24 - 26 Apr: UX Competition <br> 22 - 24 May: Game Jam </p>
         </div>
     </div> <!--features-container-->
+    <a href="./calendar.html" target="_blank">
+        <button class="hero-btn"> VIEW CALENDAR </button>
+    </a>
 </div> <!--features-section-->
 
 <!-- Logos
@@ -111,32 +141,6 @@
     <img class="logos" src="assets/images/logos.png"/>
 </div> -->
 <!-- logos-section -->
-
-<!-- White-Section
-  ================================================== -->
-
-<div id="games" class="white-section row">
-
-    <div class="imac col-sm-6">
-        <img class="imac-screen img-responsive" src="assets/images/imj_games.png">
-    </div>
-
-    <div class="col-sm-6">
-
-        <div class="white-section-text">
-
-            <h2 class="imac-section-header light"> GAMES </h2>
-
-            <div class="imac-section-desc">
-                <span> Play wonderful games made by our talented students as a result of our game jams! </span>
-                <a href="./games.html">
-                    <button class="hero-btn"> SEE THE GAMES </button>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-<!--white-section-text-section--->
 
 
 
@@ -149,11 +153,11 @@
     <div class="team-container row">
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/cto.png">
+            <img class="team-member-pic" src="assets/images/execs/ed.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">President</h4>
                 <h5 class="bold">Edward</h5>
-                <p class="light">The brains behind the whole operation</p>
+                <!-- <p class="light">The brains behind the whole operation</p> -->
                 <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
                                                        src="assets/images/team-facebook.svg"></a>
@@ -163,11 +167,11 @@
         </div>
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/cto.png">
+            <img class="team-member-pic" src="assets/images/execs/rosie.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Vice President</h4>
                 <h5 class="bold">Rosalie</h5>
-                <p class="light">The brains behind the brains</p>
+                <!-- <p class="light">The brains behind the brains</p> -->
                 <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
                                                        src="assets/images/team-facebook.svg"></a>
@@ -177,11 +181,11 @@
         </div>
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/ceo.png">
+            <img class="team-member-pic" src="assets/images/execs/duc.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Events</h4>
                 <h5 class="bold">Duc</h5>
-                <p class="light">The one that puts it all together</p>
+                <!-- <p class="light">The one that puts it all together</p> -->
                 <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
                                                        src="assets/images/team-facebook.svg"></a>
@@ -191,11 +195,11 @@
         </div>
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/cfo.png">
+            <img class="team-member-pic" src="assets/images/execs/jordan.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Treasurer</h4>
                 <h5 class="bold">Jordan</h5>
-                <p class="light">The guy with his hand on the wallet</p>
+                <!-- <p class="light">The guy with his hand on the wallet</p> -->
                 <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
                                                        src="assets/images/team-facebook.svg"></a>
@@ -206,11 +210,11 @@
         </div>
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/cfo.png">
+            <img class="team-member-pic" src="assets/images/cfo.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Secretary</h4>
                 <h5 class="bold">Jasmeet</h5>
-                <p class="light">The one who speaks to the people</p>
+                <!-- <p class="light">The one who speaks to the people</p> -->
                 <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
                                                        src="assets/images/team-facebook.svg"></a>
@@ -221,11 +225,11 @@
         </div>
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/cfo.png">
+            <img class="team-member-pic" src="assets/images/cfo.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Marketing</h4>
                 <h5 class="bold">Stephen</h5>
-                <p class="light">The number one hypeman</p>
+                <!-- <p class="light">The number one hypeman</p> -->
                 <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
                                                        src="assets/images/team-facebook.svg"></a>
@@ -243,7 +247,7 @@
 <!-- Email-Section
   ================================================== -->
 
-<div class="blue-section">
+<div class="secondary-background blue-section">
     <h3 class="blue-section-header bold"> Sign up for our mailing list!</h3>
     <h4 class="blue-section-subtext light">Be the first to know about our events, game dev jobs and news about games.</h4>
 
@@ -272,19 +276,19 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-sm-2"></div>
-
-            <div class="col-sm-8 webscope">
+            <!-- <div class="col-sm-8 webscope">
                 <span class="webscope-text"> Powered by </span>
                 <a href="https://webscopeapp.com"> <img src="assets/images/webscope.svg"/> </a>
             </div>
-            <!--webscope-->
+            webscope -->
 
-            <div class="col-sm-2">
+            <div class="col-sm">
                 <div class="social-links">
-                    <a href="https://twitter.com/webscopeapp"> <img class="social-link"
+                    <a href="https://twitter.com/utsplaymakers"> <img class="social-link"
                                                                     src="assets/images/twitter.svg"/> </a>
-                    <a href="https://www.facebook.com/webscopeapp/?ref=aymt_homepage_panel"> <img
+                    <a href="https://discord.gg/UQzHyH"> <img class="social-link" style="width: 36px"
+                                                                    src="assets/images/discord.svg"/> </a>
+                    <a href="https://www.facebook.com/utsplaymakers"> <img
                             src="assets/images/facebook.svg"/> </a>
                 </div>
                 <!--social-links-->
