Crappy games page

--- a/games.html
+++ b/games.html
@@ -14,24 +14,60 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css"/>
-    <link rel="stylesheet" href="assets/css/responsive.css"/>
+    <link rel="stylesheet" href="assets/css/portfolio.css"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
 </head>
 
 <body>
-    <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
-
-    <!-- header-start -->
-    <header>
-        <div class="hero-container">
-            <span>Hello Everyone</span>
-            <h3>
-                    World class consumer and trends research capabilities we design for tomorrow customers in tomorrow’s markets.
-            </h3>
+    <div class="hero-background">
+        <div>
+            <a href="./index.html"><img  src="assets/images/logo.svg" alt="Back to website" class="logo-link"></a>
         </div>
-    </header>
+        
+        <div class="text-center">
+            <h1><b>PLAYMAKERS GAME SHOWCASE</b></h1>
+            <hr>
+            <!-- <p>Description here.</p> -->
+        </div>
+        <h2>Interactive Media Jam (Oct 2019)</h2>
+        <!-- Portfolio Gallery Grid -->
+        <div class="row">
+        <div class="column">
+            <div class="content">
+                <iframe src="https://itch.io/embed/456837" height="167" width="540" frameborder="0"><a href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">Ex-Straw-Ordinary Fiasco by WhiteRice, Nicholais Krogh</a></iframe>
+                <!-- <p>Lorem ipsum..</p> -->
+            </div>
+            <div class="content">
+                <iframe src="https://itch.io/embed/456840" height="167" width="540" frameborder="0"><a href="https://gastricsparrow.itch.io/laser-turtles">Laser Turtles by Gastric Sparrow</a></iframe>
+                <!-- <h3>My Work</h3>
+                <p>Lorem ipsum..</p> -->
+            </div>
+            <div class="content">
+                <iframe src="https://itch.io/embed/456850" height="167" width="540" frameborder="0"><a href="https://jamesey.itch.io/take-flight">Take Flight by jamesey</a></iframe>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <iframe src="https://itch.io/embed/456859" height="167" width="540" frameborder="0"><a href="https://jemztones.itch.io/the-master-is-dead">The Master Is Dead! by jae, dinopoke</a></iframe>
+                <!-- <p>Lorem ipsum..</p> -->
+            </div>
+            <div class="content">
+                <iframe src="https://itch.io/embed/457415" height="167" width="540" frameborder="0"><a href="https://cazzerty.itch.io/curiosity2">Curiosity2 by Cazzerty</a></iframe>
+                <!-- <h3>My Work</h3>
+                <p>Lorem ipsum..</p> -->
+            </div>
+            <div class="content">
+                <iframe src="https://itch.io/embed/456843" height="167" width="540" frameborder="0"><a href="https://ayielin.itch.io/escape-from-building-11">Escape from Building 11 by Ayielin</a></iframe>
+            </div>
+        </div>
+
+
+        <div class='content'>
+            <!-- <img src="bear.jpg" alt="Bear" style="width:100%"> -->
+            <!-- <h3>Some Other Work</h3> -->
+            <p>(c) UTS Playmakers 2020</p>
+        </div>
+    </div>
 </body>
