--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="imac-section-desc">
                 <span> Play wonderful games from talented students participating in our game jams! </span>
                 <a href="./games.html">
-                    <button class="hero-btn"> PLAY NOW </button>
+                    <button class="hero-btn"> VIEW GAMES </button>
                 </a>
             </div>
         </div>
