Add direct link

--- a/calendar.html
+++ b/calendar.html
@@ -4,5 +4,5 @@
 
 </head>
 <body>
-    <img src="assets/images/eventcalendar-01.png" style="max-width:100%">
+    <img src="assets/images/eventcalendar-01.png" style="max-height:100%">
 </body>
