--- a/games.html
+++ b/games.html
@@ -36,30 +36,48 @@
         <div class="row">
         <div class="column">
             <div class="content">
-                <iframe src="https://itch.io/embed/456837" height="167" width="540" frameborder="0"><a href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">Ex-Straw-Ordinary Fiasco by WhiteRice, Nicholais Krogh</a></iframe>
+                <iframe src="https://itch.io/embed/456837" height="167" width="552" frameborder="0"><a href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">
+                    Ex-Straw-Ordinary Fiasco by WhiteRice, Nicholais Krogh
+                </a></iframe>
+                <a class="tiny-link" href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">Direct link</a>
                 <!-- <p>Lorem ipsum..</p> -->
             </div>
             <div class="content">
-                <iframe src="https://itch.io/embed/456840" height="167" width="540" frameborder="0"><a href="https://gastricsparrow.itch.io/laser-turtles">Laser Turtles by Gastric Sparrow</a></iframe>
+                <iframe src="https://itch.io/embed/456840" height="167" width="552" frameborder="0"><a href="https://gastricsparrow.itch.io/laser-turtles">
+                    Laser Turtles by Gastric Sparrow
+                </a></iframe>
+                <a class="tiny-link" href="https://gastricsparrow.itch.io/laser-turtles">Direct link</a>
                 <!-- <h3>My Work</h3>
                 <p>Lorem ipsum..</p> -->
             </div>
             <div class="content">
-                <iframe src="https://itch.io/embed/456850" height="167" width="540" frameborder="0"><a href="https://jamesey.itch.io/take-flight">Take Flight by jamesey</a></iframe>
+                <iframe src="https://itch.io/embed/456850" height="167" width="552" frameborder="0"><a href="https://jamesey.itch.io/take-flight">
+                    Take Flight by jamesey
+                </a></iframe>
+                <a class="tiny-link" href="https://jamesey.itch.io/take-flight">Direct link</a>
             </div>
         </div>
         <div class="column">
             <div class="content">
-                <iframe src="https://itch.io/embed/456859" height="167" width="540" frameborder="0"><a href="https://jemztones.itch.io/the-master-is-dead">The Master Is Dead! by jae, dinopoke</a></iframe>
+                <iframe src="https://itch.io/embed/456859" height="167" width="552" frameborder="0"><a href="https://jemztones.itch.io/the-master-is-dead">
+                    The Master Is Dead! by jae, dinopoke
+                </a></iframe>
+                <a class="tiny-link" href="https://jemztones.itch.io/the-master-is-dead">Direct link</a>
                 <!-- <p>Lorem ipsum..</p> -->
             </div>
             <div class="content">
-                <iframe src="https://itch.io/embed/457415" height="167" width="540" frameborder="0"><a href="https://cazzerty.itch.io/curiosity2">Curiosity2 by Cazzerty</a></iframe>
+                <iframe src="https://itch.io/embed/457415" height="167" width="552" frameborder="0"><a href="https://cazzerty.itch.io/curiosity2">
+                    Curiosity2 by Cazzerty
+                </a></iframe>
+                <a class="tiny-link" href="https://cazzerty.itch.io/curiosity2">Direct link</a>
                 <!-- <h3>My Work</h3>
                 <p>Lorem ipsum..</p> -->
             </div>
             <div class="content">
-                <iframe src="https://itch.io/embed/456843" height="167" width="540" frameborder="0"><a href="https://ayielin.itch.io/escape-from-building-11">Escape from Building 11 by Ayielin</a></iframe>
+                <iframe src="https://itch.io/embed/456843" height="167" width="552" frameborder="0"><a href="https://ayielin.itch.io/escape-from-building-11">
+                    Escape from Building 11 by Ayielin
+                </a></iframe>
+                <a class="tiny-link" href="https://ayielin.itch.io/escape-from-building-11">Direct link</a>
             </div>
         </div>
 
