--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
 
         <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/cfo.png">
+            <img class="team-member-pic" src="assets/images/execs/steve.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Marketing</h4>
                 <h5 class="bold">Stephen</h5>
