Add Jasmeet. Add social links in the middle of the page

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h2 class="imac-section-header light"> GAMES </h2>
 
             <div class="imac-section-desc">
-                <span> Play wonderful games from talented students participating in our game jams! </span>
+                <span> Play awesome games from talented students participating in our game jams! </span>
                 <a href="./games.html">
                     <button class="hero-btn"> VIEW GAMES </button>
                 </a>
@@ -137,9 +137,21 @@
 <!-- Logos
   ================================================== -->
 
-<!-- <div class="logos-section">
-    <img class="logos" src="assets/images/logos.png"/>
-</div> -->
+<div class="logos-section">
+    <div>
+        <h4>FOR LATEST UPDATES, FOLLOW US ON SOCIAL MEDIA</h4>
+    </div>
+    <div>
+        <a href="https://twitter.com/utsplaymakers" class="social-link-txt"> <img class="social-link darken"
+                                                        src="assets/images/twitter.svg"/> Twitter </a>
+        <a href="https://discord.gg/UQzHyH" class="social-link-txt"> <img class="social-link darken" style="width: 36px"
+                                                        src="assets/images/discord.svg"/> Discord </a>
+        <a href="https://instagram.com/uts_playmakers" class="social-link-txt"> <img class="social-link darken" style="width: 30px"
+                                                        src="assets/images/instagram.svg"/> Instagram </a>
+        <a href="https://www.facebook.com/utsplaymakers" class="social-link-txt"> <img class="social-link darken"
+                src="assets/images/facebook.svg"/> Facebook </a>
+    </div>
+</div>
 <!-- logos-section -->
 
 
@@ -210,7 +222,7 @@
         </div>
 
         <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/cfo.png">
+            <img class="team-member-pic" src="assets/images/execs/jasmeet.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Secretary</h4>
                 <h5 class="bold">Jasmeet</h5>
@@ -288,6 +300,8 @@
                                                                     src="assets/images/twitter.svg"/> </a>
                     <a href="https://discord.gg/UQzHyH"> <img class="social-link" style="width: 36px"
                                                                     src="assets/images/discord.svg"/> </a>
+                    <a href="https://instagram.com/uts_playmakers"> <img class="social-link" style="width: 30px"
+                                                                    src="assets/images/instagram.svg"/> </a>
                     <a href="https://www.facebook.com/utsplaymakers"> <img
                             src="assets/images/facebook.svg"/> </a>
                 </div>
