--- a/games.html
+++ b/games.html
@@ -22,62 +22,104 @@
 
 <body>
     <div class="hero-background">
-        <div>
+        <div class="playmakers-logo">
             <a href="./index.html"><img  src="assets/images/logo.svg" alt="Back to website" class="logo-link"></a>
         </div>
         
         <div class="text-center">
-            <h1><b>PLAYMAKERS GAME SHOWCASE</b></h1>
-            <hr>
-            <!-- <p>Description here.</p> -->
+            <h1><b>GAMES SHOWCASE</b></h1>
+            <!-- <p>Description</p> -->
         </div>
-        <h2>Interactive Media Jam (Oct 2019)</h2>
+        
+        <h2><a href="https://itch.io/jam/interactive-media-jam" target="_blank">Interactive Media Jam (Oct 2019)</a></h2>
         <!-- Portfolio Gallery Grid -->
         <div class="row">
-        <div class="column">
-            <div class="content">
-                <iframe src="https://itch.io/embed/456837" height="167" width="552" frameborder="0"><a href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">
-                    Ex-Straw-Ordinary Fiasco by WhiteRice, Nicholais Krogh
-                </a></iframe>
-                <a class="tiny-link" href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">Direct link</a>
-                <!-- <p>Lorem ipsum..</p> -->
+            <div class="column">
+                <div class="content">
+                    <iframe src="https://itch.io/embed/456837" class="game-iframe"><a href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">
+                        Ex-Straw-Ordinary Fiasco by WhiteRice, Nicholais Krogh
+                    </a></iframe>
+                    <!-- <a class="tiny-link" href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">Direct link</a> -->
+                    <!-- <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/456840" class="game-iframe"><a href="https://gastricsparrow.itch.io/laser-turtles">
+                        Laser Turtles by Gastric Sparrow
+                    </a></iframe>
+                    <!-- <a class="tiny-link" href="https://gastricsparrow.itch.io/laser-turtles">Direct link</a> -->
+                    <!-- <h3>My Work</h3>
+                    <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/456850" class="game-iframe"><a href="https://jamesey.itch.io/take-flight">
+                        Take Flight by jamesey
+                    </a></iframe>
+                    <!-- <a class="tiny-link" href="https://jamesey.itch.io/take-flight">Direct link</a> -->
+                </div>
             </div>
-            <div class="content">
-                <iframe src="https://itch.io/embed/456840" height="167" width="552" frameborder="0"><a href="https://gastricsparrow.itch.io/laser-turtles">
-                    Laser Turtles by Gastric Sparrow
-                </a></iframe>
-                <a class="tiny-link" href="https://gastricsparrow.itch.io/laser-turtles">Direct link</a>
-                <!-- <h3>My Work</h3>
-                <p>Lorem ipsum..</p> -->
-            </div>
-            <div class="content">
-                <iframe src="https://itch.io/embed/456850" height="167" width="552" frameborder="0"><a href="https://jamesey.itch.io/take-flight">
-                    Take Flight by jamesey
-                </a></iframe>
-                <a class="tiny-link" href="https://jamesey.itch.io/take-flight">Direct link</a>
+            <div class="column">
+                <div class="content">
+                    <iframe src="https://itch.io/embed/456859" class="game-iframe"><a href="https://jemztones.itch.io/the-master-is-dead">
+                        The Master Is Dead! by jae, dinopoke
+                    </a></iframe>
+                    <!-- <a class="tiny-link" href="https://jemztones.itch.io/the-master-is-dead">Direct link</a> -->
+                    <!-- <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/457415" class="game-iframe"><a href="https://cazzerty.itch.io/curiosity2">
+                        Curiosity2 by Cazzerty
+                    </a></iframe>
+                    <!-- <a class="tiny-link" href="https://cazzerty.itch.io/curiosity2">Direct link</a> -->
+                    <!-- <h3>My Work</h3>
+                    <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/456843" class="game-iframe"><a href="https://ayielin.itch.io/escape-from-building-11">
+                        Escape from Building 11 by Ayielin
+                    </a></iframe>
+                    <!-- <a class="tiny-link" href="https://ayielin.itch.io/escape-from-building-11">Direct link</a> -->
+                </div>
             </div>
         </div>
-        <div class="column">
-            <div class="content">
-                <iframe src="https://itch.io/embed/456859" height="167" width="552" frameborder="0"><a href="https://jemztones.itch.io/the-master-is-dead">
-                    The Master Is Dead! by jae, dinopoke
-                </a></iframe>
-                <a class="tiny-link" href="https://jemztones.itch.io/the-master-is-dead">Direct link</a>
-                <!-- <p>Lorem ipsum..</p> -->
+
+
+        <h2><a href="https://itch.io/jam/social-distancing" target="_blank">Social Distancing Jam (22 Mar 2020)</a></h2>
+        <!-- Portfolio Gallery Grid -->
+        <div class="row">
+            <div class="column">
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592187" class="game-iframe"><a href="https://2amstudios.itch.io/rolledout">
+                        Rolled out! by 2am studios</a></iframe>
+                    <!-- <a class="tiny-link" href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">Direct link</a> -->
+                    <!-- <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592072" class="game-iframe"><a href="https://fysho.itch.io/rolling-over-it">
+                        Rolling Over It by Fysho</a></iframe>
+                    <!-- <a class="tiny-link" href="https://gastricsparrow.itch.io/laser-turtles">Direct link</a> -->
+                    <!-- <h3>My Work</h3>
+                    <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592121" class="game-iframe"><a href="https://jtama.itch.io/lawn-rolls">
+                        Lawn Rolls by JTama</a></iframe>
+                    <!-- <a class="tiny-link" href="https://jamesey.itch.io/take-flight">Direct link</a> -->
+                </div>
             </div>
-            <div class="content">
-                <iframe src="https://itch.io/embed/457415" height="167" width="552" frameborder="0"><a href="https://cazzerty.itch.io/curiosity2">
-                    Curiosity2 by Cazzerty
-                </a></iframe>
-                <a class="tiny-link" href="https://cazzerty.itch.io/curiosity2">Direct link</a>
-                <!-- <h3>My Work</h3>
-                <p>Lorem ipsum..</p> -->
-            </div>
-            <div class="content">
-                <iframe src="https://itch.io/embed/456843" height="167" width="552" frameborder="0"><a href="https://ayielin.itch.io/escape-from-building-11">
-                    Escape from Building 11 by Ayielin
-                </a></iframe>
-                <a class="tiny-link" href="https://ayielin.itch.io/escape-from-building-11">Direct link</a>
+            <div class="column">
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592159" class="game-iframe"><a href="https://kyle-hammer.itch.io/wrap-the-crap">
+                        Wrap the Crap by Kyle Hammer</a></iframe>
+                    <!-- <a class="tiny-link" href="https://jemztones.itch.io/the-master-is-dead">Direct link</a> -->
+                    <!-- <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592146" class="game-iframe"><a href="https://rose-tropea.itch.io/toilet-paper-run">
+                        Toilet Paper Run by rose_tropea</a></iframe>
+                    <!-- <a class="tiny-link" href="https://cazzerty.itch.io/curiosity2">Direct link</a> -->
+                    <!-- <h3>My Work</h3>
+                    <p>Lorem ipsum..</p> -->
+                </div>
             </div>
         </div>
 
@@ -85,7 +127,7 @@
         <div class='content'>
             <!-- <img src="bear.jpg" alt="Bear" style="width:100%"> -->
             <!-- <h3>Some Other Work</h3> -->
-            <p>(c) UTS Playmakers 2020</p>
+            <p>© UTS Playmakers 2020</p>
         </div>
     </div>
 </body>
