Update games page

--- a/games.html
+++ b/games.html
@@ -30,9 +30,54 @@
             <h1><b>GAMES SHOWCASE</b></h1>
             <!-- <p>Description</p> -->
         </div>
-        
-        <h2><a href="https://itch.io/jam/interactive-media-jam" target="_blank">Interactive Media Jam (Oct 2019)</a></h2>
+
+
+        <h2><a href="https://itch.io/jam/social-distancing" target="_blank">Social Distancing Jam (17 - 22 Mar 2020)</a></h2>
+        <p class="theme-desc">Theme: Toilet Paper</p>
+        <p class="desc">An impromptu, casual jam hosted at the beginning of COVID-19 quarantine period, with a very topical theme!</p>
         <!-- Portfolio Gallery Grid -->
+        <div class="row">
+            <div class="column">
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592187" class="game-iframe"><a href="https://2amstudios.itch.io/rolledout">
+                        Rolled out! by 2am studios</a></iframe>
+                    <!-- <a class="tiny-link" href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">Direct link</a> -->
+                    <!-- <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592072" class="game-iframe"><a href="https://fysho.itch.io/rolling-over-it">
+                        Rolling Over It by Fysho</a></iframe>
+                    <!-- <a class="tiny-link" href="https://gastricsparrow.itch.io/laser-turtles">Direct link</a> -->
+                    <!-- <h3>My Work</h3>
+                    <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592121" class="game-iframe"><a href="https://jtama.itch.io/lawn-rolls">
+                        Lawn Rolls by JTama</a></iframe>
+                    <!-- <a class="tiny-link" href="https://jamesey.itch.io/take-flight">Direct link</a> -->
+                </div>
+            </div>
+            <div class="column">
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592159" class="game-iframe"><a href="https://kyle-hammer.itch.io/wrap-the-crap">
+                        Wrap the Crap by Kyle Hammer</a></iframe>
+                    <!-- <a class="tiny-link" href="https://jemztones.itch.io/the-master-is-dead">Direct link</a> -->
+                    <!-- <p>Lorem ipsum..</p> -->
+                </div>
+                <div class="content">
+                    <iframe src="https://itch.io/embed/592146" class="game-iframe"><a href="https://rose-tropea.itch.io/toilet-paper-run">
+                        Toilet Paper Run by rose_tropea</a></iframe>
+                    <!-- <a class="tiny-link" href="https://cazzerty.itch.io/curiosity2">Direct link</a> -->
+                    <!-- <h3>My Work</h3>
+                    <p>Lorem ipsum..</p> -->
+                </div>
+            </div>
+        </div>
+        
+        <h2><a href="https://itch.io/jam/interactive-media-jam" target="_blank">Interactive Media Jam (27 - 29 Jul 2019)</a></h2>
+        <!-- Portfolio Gallery Grid -->
+        <p class="theme-desc">Theme: Merging the Physical and Digital</p>
+        <p class="desc"><a href="http://www.gamesstudio.org/articles/interactivity-jam-2019" target="_blank">Our first Interactive Media jam</a> - branching beyond games to showcase a variety of VR, AR, and Arduino based experiences in the submissions.</p>
         <div class="row">
             <div class="column">
                 <div class="content">
@@ -82,46 +127,6 @@
             </div>
         </div>
 
-
-        <h2><a href="https://itch.io/jam/social-distancing" target="_blank">Social Distancing Jam (22 Mar 2020)</a></h2>
-        <!-- Portfolio Gallery Grid -->
-        <div class="row">
-            <div class="column">
-                <div class="content">
-                    <iframe src="https://itch.io/embed/592187" class="game-iframe"><a href="https://2amstudios.itch.io/rolledout">
-                        Rolled out! by 2am studios</a></iframe>
-                    <!-- <a class="tiny-link" href="https://whitericee.itch.io/ex-straw-ordinary-fiasco">Direct link</a> -->
-                    <!-- <p>Lorem ipsum..</p> -->
-                </div>
-                <div class="content">
-                    <iframe src="https://itch.io/embed/592072" class="game-iframe"><a href="https://fysho.itch.io/rolling-over-it">
-                        Rolling Over It by Fysho</a></iframe>
-                    <!-- <a class="tiny-link" href="https://gastricsparrow.itch.io/laser-turtles">Direct link</a> -->
-                    <!-- <h3>My Work</h3>
-                    <p>Lorem ipsum..</p> -->
-                </div>
-                <div class="content">
-                    <iframe src="https://itch.io/embed/592121" class="game-iframe"><a href="https://jtama.itch.io/lawn-rolls">
-                        Lawn Rolls by JTama</a></iframe>
-                    <!-- <a class="tiny-link" href="https://jamesey.itch.io/take-flight">Direct link</a> -->
-                </div>
-            </div>
-            <div class="column">
-                <div class="content">
-                    <iframe src="https://itch.io/embed/592159" class="game-iframe"><a href="https://kyle-hammer.itch.io/wrap-the-crap">
-                        Wrap the Crap by Kyle Hammer</a></iframe>
-                    <!-- <a class="tiny-link" href="https://jemztones.itch.io/the-master-is-dead">Direct link</a> -->
-                    <!-- <p>Lorem ipsum..</p> -->
-                </div>
-                <div class="content">
-                    <iframe src="https://itch.io/embed/592146" class="game-iframe"><a href="https://rose-tropea.itch.io/toilet-paper-run">
-                        Toilet Paper Run by rose_tropea</a></iframe>
-                    <!-- <a class="tiny-link" href="https://cazzerty.itch.io/curiosity2">Direct link</a> -->
-                    <!-- <h3>My Work</h3>
-                    <p>Lorem ipsum..</p> -->
-                </div>
-            </div>
-        </div>
 
 
         <div class='content'>
