--- a/games.html
+++ b/games.html
@@ -34,7 +34,7 @@
 
         <h2><a href="https://itch.io/jam/social-distancing" target="_blank">Social Distancing Jam (17 - 22 Mar 2020)</a></h2>
         <p class="theme-desc">Theme: Toilet Paper</p>
-        <p class="desc">An impromptu, casual jam hosted at the beginning of COVID-19 quarantine period, with a very topical theme!</p>
+        <p class="desc">An impromptu, casual jam hosted <a href="https://discord.gg/UQzHyH" target="_blank">on our Discord</a> at the beginning of COVID-19 quarantine period, with a very topical theme!</p>
         <!-- Portfolio Gallery Grid -->
         <div class="row">
             <div class="column">
