--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             <div class="feature-icon feature-no-display">
                 <img class="feature-img" src="assets/images/responsive.svg">
             </div>
-            <h5 class="feature-head-text feature-no-display"> WEEKLY MEETUP </h5>
-            <p class="feature-subtext light feature-no-display"> Every Friday, work on games together, play test and receive feedback. <br><br>We'll also have a fun social outing in this space every month. </p>
+            <h5 class="feature-head-text feature-no-display"> WEEKLY CHALLENGE </h5>
+            <p class="feature-subtext light feature-no-display"> Every Friday, we will meet on Discord, hang out, discuss and play games. <br><br>We'll also run a weekly challenge - any creative outlet welcome - with a different topic every week, starting 31 Apr.</p>
         </div>
 
         <div class="col-sm-4 feature">
