--- a/calendar.html
+++ b/calendar.html
@@ -4,5 +4,7 @@
 
 </head>
 <body>
-    <img src="assets/images/eventcalendar-01.png" style="max-width:100%">
+    <div style="text-align: center;">
+        <img style="max-width:60%" src="assets/images/eventcalendar-postvirus-01.png" style="max-width:100%">
+    </div>
 </body>
