--- a/index.html
+++ b/index.html
@@ -261,17 +261,45 @@
 
 <div class="secondary-background blue-section">
     <h3 class="blue-section-header bold"> Sign up for our mailing list!</h3>
-    <h4 class="blue-section-subtext light">Be the first to know about our events, game dev jobs and news about games.</h4>
+    <h4 class="blue-section-subtext light">Be the first to know about our major events, as well as game jobs and news.</h4>
 
     <div class="email-form-div">
-        <form id="email-form" class="form-group email-form" action="mailchimp.php" method="post">
+        <!-- <form id="email-form" class="form-group email-form" action="mailchimp.php" method="post">
             <input type="email" class="form-control email-input" name="email" id="newsletter-email-input"
                    placeholder="Enter your email">
             <button type="submit" class="btn submit-btn">Sign up</button>
             <div id="newsletter-spinner">
                 <i class="fa fa-cog fa-spin" style="font-size:24px"></i>
             </div>
-        </form>
+        </form> -->
+        <!-- Begin Mailchimp Signup Form -->
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+            <!-- <style type="text/css">
+                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style> -->
+            <div id="mc_embed_signup">
+            <form action="https://github.us19.list-manage.com/subscribe/post?u=e144f3441b35500ca7dbc7db3&amp;id=7a13d93b94" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"  class="form-group email-form"  target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                <!-- <h2>Subscribe</h2> -->
+            <!-- <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <div class="mc-field-group">
+                <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+            </label> -->
+                <input type="email" value="" name="EMAIL" class="form-control email-input" id="mce-EMAIL">
+            </div>
+                <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e144f3441b35500ca7dbc7db3_7a13d93b94" tabindex="-1" value=""></div>
+                <button type="submit" class="btn submit-btn" id="mc-embedded-subscribe">Sign up</button>
+                </div>
+            </form>
+            </div>
+            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            <!--End mc_embed_signup-->
     </div>
     <!--email-form-div-->
 
