--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
             </div>
         </form> -->
         <!-- Begin Mailchimp Signup Form -->
-            <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+            <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> -->
             <!-- <style type="text/css">
                 #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
                 /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
                 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style> -->
-            <div id="mc_embed_signup">
+            <!-- <div id="mc_embed_signup"> -->
             <form action="https://github.us19.list-manage.com/subscribe/post?u=e144f3441b35500ca7dbc7db3&amp;id=7a13d93b94" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"  class="form-group email-form"  target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
                 <!-- <h2>Subscribe</h2> -->
@@ -297,7 +297,7 @@
                 <button type="submit" class="btn submit-btn" id="mc-embedded-subscribe">Sign up</button>
                 </div>
             </form>
-            </div>
+            <!-- </div> -->
             <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
             <!--End mc_embed_signup-->
     </div>
