Add ranking for games in game jams

--- a/games.html
+++ b/games.html
@@ -38,18 +38,28 @@
         <div class="row">
             <div class="column">
                 <div class="content">
-                    <iframe src="https://itch.io/embed/597125" class="game-iframe"><a href="https://edisu.itch.io/liquid-gold">Liquid Gold by Edisu</a></iframe>
+                    <div class="tab golden">
+                        1st
+                    </div>
+                    <iframe src="https://itch.io/embed/597149" class="game-iframe golden"><a href="https://fysho.itch.io/boom-mine">[1st] Boom Mine by James Ryan, Razin Agida Kaharuba, Roy Fu</a></iframe>
                 </div>
                 <div class="content">
-                    <iframe src="https://itch.io/embed/597149" class="game-iframe"><a href="https://fysho.itch.io/boom-mine">Boom Mine by Fysho</a></iframe>
+                    <div class="tab silver">
+                        2nd
+                      </div>
+                    <iframe src="https://itch.io/embed/597125" class="game-iframe silver"><a href="https://edisu.itch.io/liquid-gold">[2nd] Liquid Gold by Edward Su, Geoffrey Wu, Duc Vu</a></iframe>
                 </div>
+                
             </div>
             <div class="column">
                 <div class="content">
-                    <iframe src="https://itch.io/embed/597152" class="game-iframe"><a href="https://gastricsparrow.itch.io/millstone-mining-manager">Millstone Mining Manager by Gastric Sparrow</a></iframe>
+                    <div class="tab silver">
+                        2nd
+                    </div>
+                    <iframe src="https://itch.io/embed/597150" class="game-iframe silver"><a href="https://delcanprobably.itch.io/rare-robots">[2nd] Rare Robots by Delcan</a></iframe>
                 </div>
                 <div class="content">
-                    <iframe src="https://itch.io/embed/597150" class="game-iframe"><a href="https://delcanprobably.itch.io/rare-robots">Rare Robots by Delcan</a></iframe>
+                    <iframe src="https://itch.io/embed/597152" class="game-iframe"><a href="https://gastricsparrow.itch.io/millstone-mining-manager">Millstone Mining Manager by Gastric Sparrow</a></iframe>
                 </div>
             </div>
         </div>
